new file:   first meet/1.png new file:   first meet/Screenshot 2026-02-24 201501.png new file:   first meet/Screenshot 2026-02-24 201508.png new file:   first meet/Screenshot 2026-02-24 201515.png new file:   first meet/Screenshot 2026-02-24 201521.png new file:   first meet/Screenshot 2026-02-24 201526.png new file:   first meet/Screenshot 2026-02-24 201533.png new file:   first meet/Screenshot 2026-02-24 201539.png modified:   index.html

--- a/index.html
+++ b/index.html
@@ -541,6 +541,29 @@
       </div>
     </section>
 
+    <!-- MEMORIES CAROUSEL (infinite) with animation -->
+    <section class="section memories-carousel" data-aos="fade-up">
+      <div class="container">
+        <h2 class="section-title"><span>First Date</span> · snapshots</h2>
+        <div class="swiper memories-swiper" data-aos="zoom-in" data-aos-duration="600">
+          <div class="swiper-wrapper">
+            <div class="swiper-slide"><img src="first meet/1.png" alt="mirror1"><div class="slide-caption"></div></div>
+            <div class="swiper-slide"><img src="first meet/Screenshot 2026-02-24 201501.png" alt="mirror2"><div class="slide-caption"></div></div>
+            <div class="swiper-slide"><img src="first meet/Screenshot 2026-02-24 201508.png" alt="mirror3"><div class="slide-caption"></div></div>
+            <div class="swiper-slide"><img src="first meet/Screenshot 2026-02-24 201515.png" alt="memory1"><div class="slide-caption"></div></div>
+            <div class="swiper-slide"><img src="first meet/Screenshot 2026-02-24 201521.png" alt="memory2"><div class="slide-caption"></div></div>
+            <div class="swiper-slide"><img src="first meet/Screenshot 2026-02-24 201526.png" alt="memory2"><div class="slide-caption"></div></div>
+            <div class="swiper-slide"><img src="first meet/Screenshot 2026-02-24 201533.png" alt="memory2"><div class="slide-caption"></div></div>
+            <div class="swiper-slide"><img src="first meet/Screenshot 2026-02-24 201539.png" alt="memory2"><div class="slide-caption"></div></div>
+          
+          </div>
+          <div class="swiper-button-next"></div>
+          <div class="swiper-button-prev"></div>
+          <div class="swiper-pagination"></div>
+        </div>
+      </div>
+    </section>
+
     <!-- PARALLAX (minimal) -->
     <section class="parallax" style="background-image: url('Me & Kimtots/logo2.png');" data-aos="fade" data-aos-duration="1200">
       <div class="parallax-content">
