modified:   index.html

--- a/index.html
+++ b/index.html
@@ -568,7 +568,7 @@
     <section class="parallax" style="background-image: url('Me & Kimtots/logo2.png');" data-aos="fade" data-aos-duration="1200">
       <div class="parallax-content">
         <h2>our story</h2>
-        <p>Endless Love</p>
+        <p>My Forever</p>
       </div>
     </section>
 
