modified:   index.html

--- a/index.html
+++ b/index.html
@@ -671,8 +671,8 @@
       // ---------- VIDEO MEMORIES (edit array for your own videos) ----------
       const videoMemories = [
         { src: 'Me & Kimtots/video1.mp4', poster: 'Me & Kimtots/1.jpg', title: 'Eat Bonding', description: 'TimeLapsed' },
-        { src: 'video1.mp4', poster: '02-27.1.jpg', title: 'Lunch Date', description: 'With You' },
-        { src: 'video2.mp4', poster: '02-27.2.jpg', title: 'forever kiss', description: 'can’t stop watching' }
+        { src: 'Me & Kimtots/video2.mp4', poster: 'Me & Kimtots/kim.jpg', title: 'Lunch Date', description: 'With You' },
+        { src: 'Me & Kimtots/video3.mp4', poster: 'Me & Kimtots/kim2.jpg', title: 'forever kiss', description: 'can’t stop watching' }
       ];
       const videoGrid = document.getElementById('video-grid-container');
       if (videoGrid) {
